--- a/style.css
+++ b/style.css
@@ -65,6 +65,15 @@
   width: 240px;
   padding: .5em 1em .5em 2.5em;
   } 
+ .input{
+  font-size: 16px;
+  line-height: 1.5;
+  border: 1px solid #C5CBD5;
+  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.20);
+  border-radius: 8px;
+  width: 240px;
+  padding: .5em 1em .5em 2.5em;
+  } 
   
   .input-inset::placeholder{
     color: #838D99;
