--- a/assets/style.css
+++ b/assets/style.css
@@ -39,17 +39,23 @@
   .grid > .box {
     border: 1px solid #ccc;
     box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    height: 450px;
+    overflow: hidden;
   }
   .grid > .box img {
     max-width: 100%;
   }
+
   .text {
     padding: 0 20px 20px;
+   
   }
  .search{
   position: absolute;
   top: 30px;
   left: 25%;
+  display: flex;
+  gap: 15px;
  }
  .input-inset{
   font-size: 16px;
@@ -82,4 +88,45 @@
   .input-inset:focus {
     outline: none;
     border: 1px solid #84A2FA;
+  }
+
+  .episodegrid { 
+
+    display: grid;
+
+    grid-gap: 15px;
+    }
+  .episodegrid > .box {
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    height: 450px;
+    overflow: hidden;
+  }
+  .episodegrid > .box img {
+    max-width: 100%;
+  }
+  .episodecontent{
+    display: flex;
+    grid-column-gap: 5%;
+    padding: 10px;
+  }
+  .box-details{
+    border: 1px solid #ccc; 
+     box-shadow: 2px 2px 6px 0px #c5cbd5;
+     width: 200px;
+     padding: 10px;
+  }
+  .episodebox{
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    padding: 10px;
+  }
+  .paragraphclass{
+    width: 385px;
+  }
+  .paragraphclass p {
+    text-align: justify;
+  }
+  .text p {
+    text-align: justify;
   }
